fileK8sYaml/movie-backend-with-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: movie-qtm-backend
  name: movie-qtm-backend-deploy
  namespace: movie-qtm
spec:
  replicas: 2
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: movie-qtm-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: movie-qtm-backend
      namespace: movie-qtm
    spec:
      containers:
        - image: hoangvn2k4/movie-qtm-backend:v1
          imagePullPolicy: Always
          name: movie-qtm-deployment
          ports:
            - containerPort: 8800
              name: tcp
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: movie-qtm-backend-service
  namespace: movie-qtm
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 8800
      protocol: TCP
      targetPort: 8800
  selector:
    app: movie-qtm-backend
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-qtm-backend-ingress
  namespace: movie-qtm
spec:
  ingressClassName: nginx
  rules:
    - host: api-movie-qtm.qtmdoan.vn
      http:
        paths:
          - backend:
              service:
                name: movie-qtm-backend-service
                port:
                  number: 8800
            path: /
            pathType: Prefix
